--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,7 @@ env:
   LOCATION: westeurope
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: f1a5961a-03f2-46d8-9072-4e6fc4e87579
-  WEBAPP-NAME: az400-webapp-WebAppJo
+  WEBAPP-NAME: WebAppJo
 
 
 jobs:
